body overflow resolve

--- a/spot.css
+++ b/spot.css
@@ -381,6 +381,6 @@ input::placeholder {
 
 }
 
-.body{
+body{
     overflow-x: hidden;
 }
